# ai-video-creation

./: .gitignore  README.md  README_EN.md
backend/: .gitignore  pyproject.toml  run.py
backend/src/: main.py
backend/src/controllers/: chat_tts_controller.py  project_controller.py  text_to_image_controller.py  whisper_controller.py
backend/src/services/chat_tts_service/: chat_tts_utils.py
backend/src/services/kolors/: kolors_service.py
backend/src/services/media_service/: media_service.py
backend/src/services/project_service/: gen_video.py  model.py  project_service.py
backend/src/services/whisper_service/: whisper_next.py  whisper_service.py
backend/src/tools/: file_tools.py
backend/src/utils/: log_utils.py
backend/test/: test.py
frontend/: .eslintignore  .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json
frontend/scripts/: webpack.config.base.ts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
frontend/src/api/: api.ts
frontend/src/common/: constants.ts  declare.ts  request.ts
frontend/src/declare/: project.ts
frontend/src/ui/context/: dependency-injection-context.tsx
frontend/src/ui/controllers/: router-controller.ts
frontend/src/ui/modules/art-creation/: art-creation-controller.ts  art-creation-main.tsx  art-creation-page.tsx  art-creation-store.ts  art-creation-table.tsx  creation-layout.tsx  edit-table-cell.tsx  hooks.tsx  start-creation.tsx  style.css
frontend/src/ui/modules/art-creation/components/: actions.tsx  export-jianying-project.tsx  preview-video.tsx  row-actions.tsx
frontend/src/ui/modules/setting/: audio-setting.tsx  setting-controller.ts  setting-main.tsx  setting-page.tsx
frontend/src/ui/renderer/: App.tsx  app-context.tsx  index.ejs
frontend/src/ui/routers/config/: hooks.ts  router-menu-config.tsx
frontend/src/ui/routers/layout/: index.tsx  sider-menu.tsx
frontend/src/ui/utils/: utils.ts
